Revert "Alignment Fixes; Closes #371 (#399)"
This reverts commit bec13e8138aeaae332f75b3c577bc5f6c22c7e05.

--- a/less/categories.less
+++ b/less/categories.less
@@ -40,7 +40,6 @@
 				line-height: 22px;
 				margin: 0;
 				margin-left: 62px;
-				margin-top: 4px;
 
 				strong {
 					color: @gray-dark;
@@ -191,7 +190,7 @@
 .stats {
 	font-size: 20px;
 	text-align: center;
-	margin-top: 3px;
+	margin-top: 7px;
 	line-height: 22px;
 
 	small {
